...
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>

    <string name="new_option">new…</string>
    <string name="edit_option">edit…</string>

    <string name="confirm">Confirm</string>
    <string name="ignore">Ignore</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="help">Help</string>

    <string name="discard">Discard</string>

    <string name="next">Next</string>
...
    <string name="am_unpack">Unpack</string>
    <string name="am_copy">Copy</string>
    <string name="am_delete">Delete</string>
    <string name="am_rename">Rename</string>
    <string name="am_convert">Convert</string>
    <string name="am_merge">Merge</string>
    <string name="dialog_confirm_delete">You can\'t undo this!</string>

    <string name="list_headline_sprites">Actors and objects</string>

    <!-- Options Menu Options -->
    <string name="backpack">Backpack</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="merge">Merge</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>
    <string name="project_options">Project options</string>
    <string name="from_library">Add from library</string>
...
    <string name="no_variable_selected">No variable selected</string>

    <string name="find">Find</string>
    <string name="no_results_found">No results found</string>
    <string name="query_field_is_empty">Query field is empty</string>

    <string name="cut">Cut</string>
    <string name="paste">Paste</string>

    <!-- Particle Effects -->
    <string name="fade_particle_effect">Fade particle effect</string>
    <string name="particle_effects_fade_in">in</string>
    <string name="particle_effects_fade_out">out</string>
    <string name="turn_particle_effect_additivity">Turn particle effect additivity</string>
...
